// src/main/proto/auth.proto
syntax = "proto3";

package com.wizdevtech.identityaccess.grpc;

option java_multiple_files = true;
option java_package = "com.wizdevtech.identityaccess.grpc";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message User {
  int64 id = 1;
  string email = 2;
  repeated string roles = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  repeated string roles = 3;
  string sensitive_data = 4;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  User user = 2;
}